<resources>
    <string name="app_name">Inventory</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overflow menu option that inserts fake item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all items data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <string name="category_item">Item Name</string>

    <string name="category_supplier_name">Supplier Name</string>

    <string name="category_image">Image</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Enter Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Enter Price</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_quantity">Quantity Available</string>

    <string name="editor_activity_title_new_item">Add an Item</string>

    <string name="editor_activity_title_edit_item">Edit Item</string>

    <string name="sell_item">Sell</string>

    <string name="insert_image">Open Gallery</string>

    <string name="change_image">Change Image</string>

    <string name="take_photo">Take Photo</string>

    <string name="editor_insert_product_failed">Error with saving product</string>

    <string name="editor_insert_product_successful">Product saved</string>

    <string name="editor_update_product_failed">Error updating product</string>

    <string name="editor_update_product_successful">Product updated</string>

    <string name="initial_value_quantity">1</string>

    <string name="quantity_warning">There cannot be negative quantity values</string>

    <string name="unknown_supplier">Unknown supplier</string>

    <string name="no_name">Item must have a name</string>

    <string name="empty_database">Your inventory is empty…</string>

    <string name="empty_database_1">Get started by adding a new product</string>

    <string name="name_validator">Item name is required</string>

    <string name="price_validator">Item price is required</string>

    <string name="quantity_validator">Item quantity is required</string>

    <string name="supplier_validator">Supplier name is required</string>

    <string name="picture_validator">An image of the product is required</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete_all_dialog_msg">Are you sure you want to delete all products?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="out_of_stock">This item is out of stock</string>

    <string name="order_more">Contact supplier</string>

    <string name="image_validator">An image of the product is required</string>

    <string name="category_price">Price</string>

    <string name="dummy_product_name">Lego Batman</string>

    <string name="dummy_product_supplier">eBay</string>

    <string name="currency">$ %1$s</string>

    <string name="available_items">%d available items</string>

    <string name="supplier_email">Supplier Email</string>

    <string name="supplier_email_hit">Supplier Email (optional)</string>

    <string name="empty_email">Your supplier doesn\'t have an email,\n please save an email </string>

    <string name="supplies_order">Supplies Order: %1$s</string>

    <string name="dummy_provider_email">gothamcity@fakemail.com</string>

</resources>