<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/item_text_section"
        style="@style/CategoryStyle"
        android:orientation="vertical">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/LabelStyle"
                android:text="@string/category_item" />

            <!-- Input fields -->
            <LinearLayout style="@style/input_fields">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_item_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_name"
                    android:inputType="textCapWords" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/CategoryStyle">

            <!-- Label -->
            <TextView
                style="@style/LabelStyle"
                android:text="@string/category_price" />

            <!-- Input fields -->
            <LinearLayout style="@style/input_fields">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_item_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_price"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>