<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/category_item" />

        <!-- Input fields -->
        <LinearLayout style="@style/input_fields">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/CategoryStyle">

        <!-- Label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/category_price" />

        <!-- Input fields -->
        <LinearLayout style="@style/input_fields">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_item_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_price"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

    <!-- Quantity field -->
    <LinearLayout style="@style/CategoryStyle">

        <!-- Label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/hint_item_quantity" />

        <!-- Input fields -->

        <LinearLayout style="@style/input_fields">

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:onClick="decreaseQuantityAmount"
                android:text="-" />

            <EditText
                android:id="@+id/edit_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:inputType="number"
                android:textAppearance="?android:textAppearanceMedium" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:onClick="increaseQuantityAmount"
                android:text="+" />
        </LinearLayout>

    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        style="@style/CategoryStyle">

        <!-- Label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <RelativeLayout style="@style/input_fields">

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_product_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />
        </RelativeLayout>

    </LinearLayout>

    <!-- Image category -->
    <LinearLayout
        android:id="@+id/container_image"
        style="@style/CategoryStyle">

        <!-- Label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/category_image" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/insert_image_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:onClick="openGallery"
                    android:text="@string/insert_image" />

                <Button
                    android:id="@+id/contact_supplier"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:onClick="contactSupplier"
                    android:text="@string/order_more" />
            </LinearLayout>

            <ImageView
                android:id="@+id/insert_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>