<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:id="@+id/container_image"
            style="@style/CategoryStyle">

            <!-- Label -->
            <TextView
                style="@style/LabelStyle"
                android:text="@string/category_image" />

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/insert_image_button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:onClick="openGallery"
                        android:text="@string/insert_image" />

                    <Button
                        android:id="@+id/take_photo"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:onClick="takePicture"
                        android:text="@string/take_photo" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</layout>